fix nav overflow

--- a/src/template/profitelo_theme/stylesheets/common/components/dashboard/settings/navigation/navigation.sass
+++ b/src/template/profitelo_theme/stylesheets/common/components/dashboard/settings/navigation/navigation.sass
@@ -14,6 +14,10 @@
   .dashboard-nav
     order: 2
     overflow-x: scroll
+    overflow-y: hidden
+
+    &::-webkit-scrollbar
+      display: none
 
     +mdm
       overflow: hidden
@@ -72,7 +76,7 @@
             width: 0
             height: 0
             position: absolute
-            bottom: 0
+            bottom: -1px
             left: 0
             right: 0
             margin: auto
